--- a/src/components/serviceList/ServiceList.module.css
+++ b/src/components/serviceList/ServiceList.module.css
@@ -3,7 +3,7 @@
   background-repeat: no-repeat;
   background-size: 100%;
   background-attachment: scroll;
-  padding: 40px 0px;
+  padding: 60px 0px;
 }
 .serviceHeader {
   text-align: center;
@@ -28,15 +28,19 @@
 .serviceItemsContainer {
   display: flex;
   flex-wrap: wrap;
+  max-width: 70%;
+  justify-content: start;
+  margin: 30px 0px;
 }
 .serviceItemContainer {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  max-width: 20%;
+  max-width: 30%;
+  margin: 10px;
+  gap: 10px;
   color: white;
-  background-color: #c29336;
 }
 .serviceItemText {
   margin: 25px;
@@ -64,6 +68,32 @@
 .serviceItemPara {
   margin: 15px 0px;
 }
-.serviceItemsContainer:first-child {
+.serviceItemsContainer .serviceItemContainer:nth-child(1),
+.serviceItemsContainer .serviceItemContainer:nth-child(1) .serviceItemText {
   background-color: #c29336;
+}
+
+.serviceItemsContainer .serviceItemContainer:nth-child(2),
+.serviceItemsContainer .serviceItemContainer:nth-child(2) .serviceItemText {
+  background-color: #636e87;
+}
+
+.serviceItemsContainer .serviceItemContainer:nth-child(3),
+.serviceItemsContainer .serviceItemContainer:nth-child(3).serviceItemText {
+  background-color: #44706e;
+}
+
+.serviceItemsContainer .serviceItemContainer:nth-child(4),
+.serviceItemsContainer .serviceItemContainer:nth-child(4).serviceItemText {
+  background-color: #b76f71;
+}
+
+.serviceItemsContainer .serviceItemContainer:nth-child(5),
+.serviceItemsContainer .serviceItemContainer:nth-child(5).serviceItemText {
+  background-color: #5e965b;
+}
+
+.serviceItemsContainer div:nth-child(6),
+.serviceItemsContainer div:nth-child(6).serviceItemText {
+  background-color: #9c8965;
 }
